Ajout de l'API /api/dashboard et intégration frontend

--- a/frontend/angular-project-j2ee/src/index.html
+++ b/frontend/angular-project-j2ee/src/index.html
@@ -5,6 +5,16 @@
   <title>AngularProjectJ2ee</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- ✅ Font Awesome pour les icônes -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-p1CmVz5N4cWx3Z5LVo5vOJp3NnZ+PSJK5mcLPrXWIKmYhAA+uO8ZUVTFk6a1dYZThh2jUc9+x4WD4FAsUN/c1w=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
